# dockcross

./: .gitignore  CMakeLists.txt  README.md
dockcross/: Dockerfile.linux-x64
